--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,17 @@
 <h1>All Users</h1>
 
+<% if !@users.any? %>
+<p>
+  No users found.
+</p>
+<% else %>
 <ul>
   <% @users.each do |user| %>
   <li>
-    <%= user.username, user_path(user.id) %>
-    <%= user.email, user_path(user.id) %>
+    <%= link_to user.username, user_path(user.id) %>
+    <%= user.email %>
   </li>
 
   <% end %>
 </ul>
+<% end %>
