Added Form to Product show page in order to create new order item

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,15 +10,14 @@
 </li>
 </ul>
 
-<%= link_to "Back to all products", products_path %>
-<%= link_to "Edit this product", edit_product_path(@product.id) %>
-
-
-<%= form_for @product do |f| %>
+<%= form_for @item do |f| %>
 
   <%= f.label :quantity %>
-  <%= f.select :quantity, [1..@product.stock] %>
+  <%= f.select :quantity, ["1".."#{@product.stock}"] %>
 
-  <%= f.submit %>
+  <%= f.submit "Add to Cart" %>
 
 <% end %>
+
+<%= link_to "Back to all products", products_path %>
+<%= link_to "Edit this product", edit_product_path(@product.id) %>
