--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,10 +10,10 @@
 </li>
 </ul>
 
-<%= form_for @item do |f| %>
+<%= form_for @item, url: new_order_item_path(@product.id), method: :post do |f| %>
 
   <%= f.label :quantity %>
-  <%= f.select :quantity, ["1".."#{@product.stock}"] %>
+  <%= f.select :quantity, [1,2,3] %>
 
   <%= f.submit "Add to Cart" %>
 
