Fixed form by adding appropriate range depending on stock of products

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,8 @@
 <%= form_for @item, url: new_order_item_path(@product.id), method: :post do |f| %>
 
   <%= f.label :quantity %>
-  <%= f.select :quantity, [1,2,3] %>
+  <% quantiy = [] %>
+  <%= f.select :quantity, (0..@product.stock) %>
 
   <%= f.submit "Add to Cart" %>
 
