--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,1 +1,5 @@
 <h1>All Categories</h1>
+<% @categories.each do |category| %>
+    <!-- need to link to list of products with this category -->
+    Category: <%= category.name %>
+<% end %>
