--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -1,8 +1,11 @@
 <h1>Cart</h1>
 <ul>
-  <% @items.each do |item| %>
+  <% @cart_items.each do |item| %>
     <li>
       <%= link_to item.product.name, product_path(item.product_id) %>: <%= item.quantity %>
     </li>
   <% end %>
+
 </ul>
+
+<%= session[:order_id] %>
