added link in header and root route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1 class="main-header">d'Ebtsy</h1>
+    <h1 class="main-header"><%= link_to "d'Ebtsy", root_path %></h1>
     <ul class="header-nav">
       <li>
         <% if current_user %>
