reviews are adding and connected to products

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,3 +31,4 @@
 
 <%= link_to "Back to all products", products_path %>
 <%= link_to "Edit this product", edit_product_path(@product.id) %>
+<%= link_to "Review this product", new_product_review_path(@product.id) %>
