--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,1 +1,27 @@
 <h1>Enter CC / Shipping Info</h1>
+
+<%= form_for @order do |f| %>
+
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+
+  <%= f.label :name_on_cc %>
+  <%= f.text_field :name_on_cc %>
+
+  <%= f.label :cc_number %>
+  <%= f.text_field :cc_number %>
+
+  <%= f.label :cc_ccv %>
+  <%= f.text_field :cc_ccv %>
+
+  <%= f.label :address, "Shipping Address" %>
+  <%= f.text_area :address %>
+
+  <%= f.label :billing_zip %>
+  <%= f.text_area :billing_zip %>
+
+  <!-- <%= hidden_field_tag 'category', params[:category] %> -->
+
+  <%= f.submit %>
+
+<% end %>
