--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,4 +1,11 @@
-<h1>Enter CC / Shipping Info</h1>
+<h1>Confirm Order Details</h1>
+<% @order.order_items.each do |order_item| %>
+  <p>
+    <%= order_item.product.name %>: <%= order_item.quantity %>
+  </p>
+<% end %>
+
+<h2>Shipping Information</h2>
 
 <%= form_for @order, url: order_path(@order.id), method: :put do |f| %>
 
@@ -14,13 +21,11 @@
   <%= f.label :cc_ccv %>
   <%= f.text_field :cc_ccv %>
 
+  <%= f.label :billing_zip %>
+  <%= f.text_field :billing_zip %>
+
   <%= f.label :address, "Shipping Address" %>
   <%= f.text_area :address %>
-
-  <%= f.label :billing_zip %>
-  <%= f.text_area :billing_zip %>
-
-  <!-- <%= hidden_field_tag 'category', params[:category] %> -->
 
   <%= f.submit %>
 
