quantity dropdown now defaults to the current quantity on cart items

--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -4,13 +4,13 @@
     <li>
       <%= link_to item.product.name, product_path(item.product_id) %>
       <p>
-        quantity: <%= item.quantity %>
+        <!-- quantity: <%# item.quantity %> -->
       </p>
 
       <%= form_for item, url: order_item_path(item), method: :patch do |f| %>
 
         <%= f.label :quantity, "Quantity" %>
-        <%= f.select :quantity, options_for_select(1..item.product.stock) %>
+        <%= f.select :quantity, options_for_select((1..item.product.stock), selected: item.quantity)  %>
         <%= f.submit "Update quantity" %>
       <% end %>
     </li>
