--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Categories</h1>
 <% @categories.each do |category| %>
     <!-- need to link to list of products with this category -->
-    Category: <%= category.name %>
+    Category: <%= link_to category.name, category_products_path(category.id) %>
 <% end %>
