--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,9 @@
-<h1>All Categories</h1>
+<h1>Shop by Categories</h1>
 <% @categories.each do |category| %>
     <!-- need to link to list of products with this category -->
-    Category: <%= link_to category.name, category_products_path(category.id) %>
+    <ul>
+      <li>
+        <%= link_to category.name, category_products_path(category.id) %>
+      </li>
+    </ul>
 <% end %>
