can add new category, link to shop by categories page on main nav bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,12 +28,12 @@ header {
   float: left;
 }
 
-.header-nav {
+.header-login {
   float: right;
   display: block;
 }
 
-.header-nav li {
+.header-login li {
   display: inline-block;
 }
 
