Added Total to Checkout Page

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,9 +1,15 @@
 <h1>Confirm Order Details</h1>
-<% @order.order_items.each do |order_item| %>
-  <p>
-    <%= order_item.product.name %>, Quantity: <%= order_item.quantity %> = $<%= order_item.subtotal %>
-  </p>
-<% end %>
+<ul>
+  <% @order.order_items.each do |order_item| %>
+    <li>
+      <%= order_item.product.name %>, Quantity: <%= order_item.quantity %> = $<%= order_item.subtotal %>
+    </li>
+  <% end %>
+</ul>
+
+<p>
+  Your Order Total is: $<%= @order.total %>
+</p>
 
 <h2>Shipping Information</h2>
 
