--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
             <li>
                 <%= link_to "Shop by Category", categories_path %>
             </li>
+            <li>
+                <%= link_to "Shop by Merchant", users_path %>
+            </li>
         </ul>
     </nav>
 
