--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,8 +8,8 @@
 <ul>
   <% @users.each do |user| %>
   <li>
-    <%= link_to user.username, user_path(user.id) %>
-    <%= user.email %>
+    <%= link_to user.username, user_products_path(user.id) %>
+    <%# user.email %>
   </li>
 
   <% end %>
