--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,4 +8,4 @@
 <% end %>
 </ul>
 
-<%= link_to "Add a new product", new_product_path %>
+<% if can_add_new_product? %><%= link_to "Add a new product", new_product_path %><% end %>
