--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
         <p>
           Logged in as <%= current_user.username %>
         </p>
+        <%= button_to "My account", user_path(current_user.id), method: :get %>
         <%= button_to "Log out", login_path, method: :delete %>
         <% else %>
 
