--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -26,10 +26,10 @@
   <%= f.select :selling_status, [['Selling', true], ['Retired', false]] %>
 
   <%= f.label "Categories:" %>
-  <%= f.collection_select :category_ids, Category.order(:name), :id, :name, {}, {multiple: true} %>
+  <%= f.collection_select :category_ids, Category.order(:name), :id, :name, {},  {multiple: true} %>
 
-  <%= f.label :user_id, "Merchant/user_id:" %>
-  <%= f.text_field :user_id %>
+  <%# f.label :user_id, "Merchant/user_id:" %>
+  <%# f.text_field :user_id %>
 
   <%= f.submit action_name %>
 
