added add category button to user account page and redirect back to same

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,8 @@
   <% end %>
 </ul>
 <%= button_to "Add a product to your store", new_product_path, method: :get %>
+<%= button_to "Add a new category", new_category_path, method: :get %>
+
 
 <h2><%= @user.username %>'s Purchases</h2>
 
