--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,4 +8,4 @@
     </ul>
 <% end %>
 
-<h2><%=link_to "Add a new Category", new_category_path %></h2>
+<% if current_user %><%=button_to "Add a new Category", new_category_path, method: :get %><% end %>
