added list of product's categories to product show page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,13 @@
 
 <h2><%= @product.name %></h2>
+Category:
+<ul>
+  <% @product.categories.each do |category| %>
+  <li>
+    <%= category.name %>
+  </li>
+  <% end %>
+</ul>
 <p><%= @product.description %> </p>
 <ul>
 <li>
