--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -25,7 +25,7 @@
   Please enter in all details to complete your order.
 </p>
 
-<%= form_for @order, url: order_path(@order.id), method: :put do |f| %>
+<%= form_for @order, url: confirmation_path(@order.id), method: :put do |f| %>
 
   <%= f.label :email %>
   <%= f.text_field :email, required: true %>
