--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -16,6 +16,9 @@
   <%= f.label :stock, "Stock inventory:" %>
   <%= f.text_field :stock %>
 
+  <%= f.label "Merchant/User ID:" %>
+  <%= f.text_field :user_id %>
+
   <%= f.label :description %>
   <%= f.text_area :description, size: "60x12" %>
 
