order fulfillment page

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,21 +2,26 @@
 
 <% if @user_orders != [] %>
 <ul>
-  <% @user_orders.each do |order| %>
-  <li>
-    <%= link_to "Order #{order.id}", order_path(order.id) %>
-    Date: <%= order.updated_at.strftime("%m/%d/%Y") %>
-    Status: <%= order.status %>
-    <ul>
-        <% order.order_items.each do |item| %>
-        <li>
-            <%= link_to item.product.name, product_path(item.product.id) %>
-            Quantity: <%= item.quantity %>
-            Subtotal: <%= item.subtotal %>
-            <% end %>
-        </li>
-    </ul>
-  </li>
-  <% end %>
+    <% @user_orders.each do |order| %>
+    <li>
+        <%= link_to "Order #{order.id}", order_path(order.id) %>
+        Date: <%= order.updated_at.strftime("%m/%d/%Y") %>
+        Status: <%= order.status %>
+        <ul>
+            <% order.order_items.each do |item| %>
+            <li>
+                <%= link_to item.product.name, product_path(item.product.id) %>
+                Quantity: <%= item.quantity %>
+                Subtotal: <%= item.subtotal %>
+                <%= form_for item, url: order_item_path(item), method: :patch do |f| %>
+                <%= f.label :ship_status, "Shipping Status:" %>
+                <%= f.select :ship_status, [['Shipped', true], ['Not shipped yet', false]] %>
+                <%= f.submit %>
+                <% end %>
+                <% end %>
+            </li>
+        </ul>
+    </li>
+    <% end %>
 </ul>
 <% end %>
