--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@ Category:
 <ul>
   <% @product.categories.each do |category| %>
   <li>
-    <%= category.name %>
+    <%= link_to category.name, category_products_path(category.id) %>
   </li>
   <% end %>
 </ul>
