--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.username %></h1>
 
-<h2><%= @user.username %>'s Products</h2>
+<h3><%= @user.username %>'s Products</h3>
 <ul>
   <% @user.products.each do |product| %>
   <li>
@@ -12,35 +12,6 @@
 <%= button_to "Add a new category", new_category_path, method: :get %>
 
 
-<h2><%= @user.username %>'s Purchases</h2>
+<h3><%= @user.username %>'s Purchases</h3>
 
-<h2>Order Details</h2>
-
-<% @user.orders.each do |order| %>
-  <p>Date: <%=order.updated_at %></p>
-  <p>Status: <%=order.status %></p>
-  <table>
-    <tr>
-      <th>Product Name</th>
-      <th>Price</th>
-      <th>Quantity</th>
-      <th>Subtotal</th>
-    </tr>
-    <% order.order_items.each do |order_item| %>
-    <tr>
-      <td><%= link_to order_item.product.name, product_path(order_item.product.id) %></td>
-      <td><%= order_item.product.price %></td>
-      <td><%= order_item.quantity %></td>
-      <td><%= order_item.subtotal %></td>
-    </tr>
-    <% end %>
-  </table>
-
-  <p>Order Shipped to:</p>
-  <ul>
-    <li><%= order.name_on_cc %></li>
-    <li><%= order.address %></li>
-    <li>Confirmation Email sent to:<%= order.email %> </li>
-  </ul>
-</br>
-<% end %>
+<h3><%= link_to 'My Sales Orders', user_orders_path(@user.id) %></h3>
