--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,12 @@
 <h1>Shop by Categories</h1>
+<div class="row">
 <% @categories.each do |category| %>
     <!-- need to link to list of products with this category -->
-    <ul>
-      <li>
-        <%= link_to category.name, category_products_path(category.id) %>
-      </li>
-    </ul>
+  <div class="small-6 medium-4 large-3 columns">
+    <%= image_tag(category.photo, class: "index_photo") %>
+    <h3>
+      <%= link_to category.name, category_products_path(category.id) %>
+    </h3>
+  </div>
 <% end %>
+</div>
