--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,15 @@
 <article class="index">
 
-  <h1>Shop by Categories</h1>
+  <div class="row">
+    <div class="small-6 columns hero">
+      <h3>Whatever your budget...<br /> We'll break it.</h3>
+    </div>
+    <div class="small-6 columns hero-pic">
+      <img src="https://static.pexels.com/photos/9660/business-money-pink-coins.jpg" alt="piggy bank with money" />
+    </div>
+  </div>
+
+  <h3>Shop by Categories</h3>
   <div class="row">
   <% @categories.each do |category| %>
       <!-- need to link to list of products with this category -->
