--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,17 +15,21 @@
   <header>
     <h1 class="main-header"><%= link_to "d'Ebtsy", root_path %></h1>
     <nav id="nav-bar">
-        <ul>
+        <!-- <ul>
             <li>
                 <%= link_to "Shop by Category", categories_path %>
             </li>
             <li>
                 <%= link_to "Shop by Merchant", users_path %>
             </li>
-        </ul>
+        </ul> -->
 
         <ul class="header-login">
-          <li>
+          <li class="cart">
+            <%= link_to image_tag( "cart"), cart_path %>
+            <%= total_items_in_cart %>
+          </li>
+          <li class="login">
             <% if current_user %>
             <p>
               Logged in as <%= current_user.username %>
@@ -33,14 +37,10 @@
             <%= button_to "My account", user_path(current_user.id), method: :get %>
             <%= button_to "Log out", login_path, method: :delete %>
             <% else %>
-
             <%= button_to "Log in", login_path, method: :get %>
             <% end %>
           </li>
-          <li>
-            <%= link_to image_tag( "cart", class: "cart" ), cart_path %><%= total_items_in_cart %>
-          </li>
-        </ul>  
+        </ul>
     </nav>
 
 
