--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,13 @@
 <ul>
   <% @user.products.each do |product| %>
   <li>
-    <%= product.name %> <%= link_to "Edit", edit_product_path(product.id) %>
+    <%= link_to product.name, product_path(product.id) %> <%= link_to "Edit", edit_product_path(product.id) %>
+    <% if product.selling? %>
+    <%= link_to "Retire product", status_path(product.id), method: :patch %>
+    <% else %>
+    <%= link_to "Sell product", status_path(product.id), method: :patch %>
+    <% end %>
+
   </li>
   <% end %>
 </ul>
