--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,14 @@
-<h1>All Users</h1>
-
-<% if !@users.any? %>
-<p>
-  No users found.
-</p>
-<% else %>
-<ul>
-  <% @users.each do |user| %>
-  <li>
-    <%= link_to user.username, user_products_path(user.id) %>
-    <%# user.email %>
+<div class = "row">
+  <h3 class="small-12 cloumns">Shop by Merchant</h3>
+</div>
+<ul class="row">
+<% @users.each do |user| %>
+  <li class="small-12 medium-6 large-4 columns category">
+    <div class="border">
+    <%= link_to(user_products_path(user.id)) do %>
+      <%= user.username %> <br />
+    <% end %>
+  </div>
   </li>
-
-  <% end %>
-</ul>
 <% end %>
+</ul>
