--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css?family=Codystar');*/
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
@@ -31,6 +30,13 @@ Pale Gold color: #C0B283
   background-color: #F4F4F4;
 }
 
+body {
+  clear:both;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 16px;
+  color: #373737;
+}
+
 h1, h1 a, h2, h3, h4 {
   font-family: 'Codystar', cursive;
   font-weight: bold;
@@ -39,59 +45,67 @@ h1, h1 a, h2, h3, h4 {
 
 a:hover {
   color: #DCD0C0;
+  font-weight: bold;
 }
 
 a {
   color: #373737;
 }
 
-header {
-  height: 70px;
+.button {
+  background-color: #DCD0C0;
+  color: #F4F4F4;
+  font-weight: bold;
 }
-.main-header {
-  float: left;
+
+.button:hover {
+  background-color: #C0B283;
+}
+/*header*/
+
+header {
+  height: 100px;
+  background-color: #F4F4F4;
+}
+
+#top-row {
+  border-bottom: solid 2px #DCD0C0;
 }
 
 .header-login {
-  /*clear: both;*/
   float: right;
   display: block;
+  margin-top: 5px;
 }
 
 .header-login li {
   display: inline-block;
+  margin-left: 10px;
 }
 
 .cart img {
-  height: 30px;
+  height: 40px;
 }
 
 .cart {
   margin: 10px;
+  text-align: right;
+  margin-top: 15px;
+  font-size: 1.5em;
 }
 
 .login {
   margin-right: 10px;
 }
 
-body {
-  clear:both;
-}
-
 /*Adding Styling for the categories index page*/
 .hero {
-  height: 400px;
+  height: 300px;
   background-color: #DCD0C0;
 }
 
-#pig{
-  height: 200px;
-  position: relative;
-  top: 0;
-}
-
 #slogan {
-  margin-top: 100px;
+  margin-top: 20px;
   font-family: 'Cormorant Garamond', serif;
   font-size: 3em;
   background-color: inherit;
