--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,28 +15,36 @@
 
 <body>
   <header>
-    <h1 class="main-header"><%= link_to "Debtsy", root_path %></h1>
-    <nav id="nav-bar">
+    <div class="row" id="top-row">
+      <h1 class="main-header small-4 columns"><%= link_to "Debtsy", root_path %></h1>
+      <div class="cart small-7 columns">
+        <%= link_to image_tag( "cart"), cart_path %>
+        <%= total_items_in_cart %>
+      </div>
+    </div>
+    <div class="row">
+      <nav class="small-12 columns" id="nav-bar">
+        <% if current_user %>
         <ul class="header-login">
-          <li class="cart">
-            <%= link_to image_tag( "cart"), cart_path %>
-            <%= total_items_in_cart %>
+          <li>
+            Logged in as <%= current_user.username %>
           </li>
-          <li class="login">
-            <% if current_user %>
-            <p>
-              Logged in as <%= current_user.username %>
-            </p>
-            <%= button_to "My account", user_path(current_user.id), method: :get %>
-            <%= button_to "Log out", login_path, method: :delete %>
-            <% else %>
-            <%= button_to "Log in", login_path, method: :get %>
-            <% end %>
+          <li>
+            <%= button_to "My account", user_path(current_user.id), method: :get, class: "button" %>
+          </li>
+          <li>
+            <%= button_to "Log out", login_path, method: :delete, class: "button" %>
           </li>
         </ul>
-    </nav>
-
-
+        <% else %>
+        <ul class="header-login">
+          <li>
+            <%= button_to "Log in", login_path, method: :get, class: "button" %>
+          </li>
+        </ul>
+        <% end %>
+      </nav>
+    </div>
   </header>
   <main class="content">
     <section class="flash">
