Added initial orbit slider

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,10 +57,10 @@
   <footer>
     <ul>
         <li>
-            <%= link_to "Shop by Category", categories_path %>
+            <%= link_to "shop by category", categories_path %>
         </li>
         <li>
-            <%= link_to "Shop by Merchant", users_path %>
+            <%= link_to "shop by merchant", users_path %>
         </li>
     </ul>
   </footer>
