--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,17 +125,23 @@ footer li {
   color: white;
 }
 
+ /*All Index Pages*/
+.index h3 {
+  margin-top: 20px;
+  font-size: 2.5em;
+}
+ .grid-item {
+   text-align: center;
+   margin: 20px 0px;
+   overflow: scroll;
+   font-size: 1.7em;
+  }
+
 .index_photo {
   height: 100px;
 }
 
-.category {
-  text-align: center;
-  margin: 20px 0px;
-  overflow: scroll;
- }
-
- .border {
+.border {
   width: 90%;
   height: 200px;
   border: 2px dotted #C0B283;
