--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,6 +4,26 @@
     <h3 class="small-4 columns" id="slogan">
       Whatever your budget...<br /> We can break it.
     </h3>
+  <ul class="top-products" data-orbit>
+    <li>
+      <img src="../assets/img/examples/satelite-orbit.jpg" alt="slide 1" />
+      <div class="orbit-caption">
+        Caption One.
+      </div>
+    </li>
+  <li class="active">
+    <img src="../assets/img/examples/andromeda-orbit.jpg" alt="slide 2" />
+    <div class="orbit-caption">
+      Caption Two.
+    </div>
+  </li>
+  <li>
+    <img src="../assets/img/examples/launch-orbit.jpg" alt="slide 3" />
+    <div class="orbit-caption">
+      Caption Three.
+    </div>
+  </li>
+</ul>
   </div>
 
   <div class = "row">
@@ -12,7 +32,7 @@
   <ul class="row">
   <% @categories.each do |category| %>
       <!-- need to link to list of products with this category -->
-    <li class="small-12 medium-6 large-4 columns category">
+    <li class="small-12 medium-6 large-4 columns grid-item">
       <div class="border">
       <%= link_to(category_products_path(category.id)) do %>
         <%= category.name %> <br />
