--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,19 @@
-<div class = "row">
-  <h3 class="small-12 cloumns">Shop by Merchant</h3>
-</div>
+<article class="index">
 
-<ul class="row">
-  <% @users.each do |user| %>
-    <li class="small-12 medium-6 large-4 columns category">
-      <div class="border">
-      <%= link_to(user_products_path(user.id)) do %>
-        <%= user.username %> <br />
-      <% end %>
-    </div>
-    </li>
-  <% end %>
-</ul>
+  <div class = "row">
+    <h3 class="small-12 cloumns">Shop by Merchant</h3>
+  </div>
+
+  <ul class="row">
+    <% @users.each do |user| %>
+      <li class="small-12 medium-6 large-4 columns grid-item">
+        <div class="border">
+        <%= link_to(user_products_path(user.id)) do %>
+          <%= user.username %> <br />
+        <% end %>
+      </div>
+      </li>
+    <% end %>
+  </ul>
+
+</article>
