--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>d'Ebtsy</title>
+    <title>d'Ebtsy</title>
 
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
 </head>
 
 <body>
-  <header>
-    <h1 class="main-header"><%= link_to "d'Ebtsy", root_path %></h1>
-    <nav id="nav-bar">
-        <ul>
+    <header>
+        <h1 class="main-header"><%= link_to "d'Ebtsy", root_path %></h1>
+        <nav id="nav-bar">
+            <ul>
+                <li>
+                    <%= link_to "Shop by Category", categories_path %>
+                </li>
+                <li>
+                    <%= link_to "Shop by Merchant", users_path %>
+                </li>
+            </ul>
+        </nav>
+
+        <ul class="header-login">
             <li>
-                <%= link_to "Shop by Category", categories_path %>
+                <% if current_user %>
+                <p>
+                    Logged in as <%= current_user.username %>
+                </p>
+                <%= button_to "My account", user_path(current_user.id), method: :get %>
+                <%= button_to "Log out", logout_path, method: :delete %>
+                <% else %>
+
+                <%= button_to "Log in with github", "/auth/github", method: :get %>
+                <% end %>
             </li>
             <li>
-                <%= link_to "Shop by Merchant", users_path %>
+                <%= link_to image_tag( "cart", class: "cart" ), cart_path %><%= total_items_in_cart %>
             </li>
         </ul>
-    </nav>
 
-    <ul class="header-login">
-      <li>
-        <% if current_user %>
-        <p>
-          Logged in as <%= current_user.username %>
-        </p>
-        <%= button_to "My account", user_path(current_user.id), method: :get %>
-        <%= button_to "Log out", login_path, method: :delete %>
-        <% else %>
-
-        <%= button_to "Log in", login_path, method: :get %>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to image_tag( "cart", class: "cart" ), cart_path %><%= total_items_in_cart %>
-      </li>
-    </ul>
-
-  </header>
-  <body class="content">
-    <section class="flash">
-      <% flash.each do |name, message| %>
-      <h3 class="row status <%= name %>"><%= message %></h3>
-      <% end %>
-    </section>
-    <%= yield %>
-  </body>
+    </header>
+    <body class="content">
+        <section class="flash">
+            <% flash.each do |name, message| %>
+            <h3 class="row status <%= name %>"><%= message %></h3>
+            <% end %>
+        </section>
+        <%= yield %>
+    </body>
 </body>
 </html>
