added order model class methods that calculate totals for each user based on status, also shows number of incomplete and complete orders

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,25 @@
 <h1>Sales order history</h1>
 
+<h2>SALES SUMMARY:</h2>
+<ul>
+  <li>
+    Total revenue: <%= number_to_currency(@user_total) %>
+  </li>
+  <li>
+    Fulfilled items total revenue: <%= number_to_currency(@user_fulfilled_total) %>
+  </li>
+  <li>
+    Unfulfilled items total revenue: <%= number_to_currency(@user_unfulfilled_total) %>
+  </li>
+  <li>
+    Incomplete orders: <%= @user_incomplete_orders.length %>
+  </li>
+  <li>
+    Complete orders: <%= @user_complete_orders.length %>
+  </li>
+</ul>
+
+<h2>Fulfillment Summary:</h2>
 <% if @user_orders != [] %>
 <ul>
     <% @user_orders.each do |order| %>
@@ -12,13 +32,20 @@
               <% if item.product.user_id == session[:user_id] %>
               <li>
                   <%= link_to item.product.name, product_path(item.product.id) %>
-                  Quantity: <%= item.quantity %>
-                  Subtotal: <%= item.subtotal %>
-                  <%= form_for item, url: order_item_path(item), method: :patch do |f| %>
-                  <%= f.label :ship_status, "Shipping Status:" %>
-                  <%= f.select :ship_status, [['Shipped', true], ['Not shipped yet', false]] %>
-                  <%= f.submit %>
-                  <% end %>
+                  <ul>
+                    <li>
+                      <%= item.quantity %> @ <%= number_to_currency(item.product.price) %> each --
+                      Subtotal: <%= number_to_currency(item.subtotal) %>
+                    </li>
+
+                    <li>
+                      <%= form_for item, url: order_item_path(item), method: :patch do |f| %>
+                      <%= f.label :ship_status, "Shipping Status:" %>
+                      <%= f.select :ship_status, [['Shipped', true], ['Not shipped yet', false]] %>
+                      <%= f.submit %>
+                      <% end %>
+                    </li>
+                  </ul>
                 <% end %>
               <% end %>
             </li>
