got very messy version of carosel working

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,7 +114,8 @@ footer li {
 /*Adding Styling for the categories index page*/
 .hero {
   height: 300px;
-  background-color: #DCD0C0;
+  margin-top: 50px;
+  /*background-color: #DCD0C0;*/
 }
 
 #slogan {
