--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,29 +1,17 @@
 <article class="index">
 
-  <div class="row hero">
-    <h3 class="small-4 columns" id="slogan">
-      Whatever your budget...<br /> We can break it.
-    </h3>
-  <ul class="top-products" data-orbit>
-    <li>
-      <img src="../assets/img/examples/satelite-orbit.jpg" alt="slide 1" />
-      <div class="orbit-caption">
-        Caption One.
-      </div>
-    </li>
-  <li class="active">
-    <img src="../assets/img/examples/andromeda-orbit.jpg" alt="slide 2" />
-    <div class="orbit-caption">
-      Caption Two.
-    </div>
-  </li>
-  <li>
-    <img src="../assets/img/examples/launch-orbit.jpg" alt="slide 3" />
-    <div class="orbit-caption">
-      Caption Three.
-    </div>
-  </li>
-</ul>
+  <div class="orbit" role="region" aria-label="Top Rated Products" data-orbit>
+    <ul class="orbit-container hero">
+      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+      <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+      <li class="orbit-slide is-active">
+        <h3 class="text-center">2: You can also throw some text in here!</h3>
+      </li>
+      <li class="orbit-slide">
+        <img class="orbit-image" src="" alt="Space">
+        <figcaption class="orbit-caption">A beyonce</figcaption>
+      </li>
+    </ul>
   </div>
 
   <div class = "row">
