--- a/app/views/orders/incomplete.html.erb
+++ b/app/views/orders/incomplete.html.erb
@@ -23,10 +23,10 @@
 <%= link_to "All orders", user_orders_path %>
 <%= link_to "Incomplete orders", user_orders_incomplete_path %>
 <%= link_to "Complete orders", user_orders_complete_path %>
-<h3>All orders</h3>
-<% if @user_orders != [] %>
+<h3>Incomplete orders</h3>
+<% if @user_incomplete_orders != [] %>
 <ul>
-    <% @user_orders.each do |order| %>
+    <% @user_incomplete_orders.each do |order| %>
     <li>
         <%= link_to "Order #{order.id}", order_path(order.id) %>
         Date: <%= order.updated_at.strftime("%m/%d/%Y") %>
